--- a/styles.css
+++ b/styles.css
@@ -46,6 +46,12 @@ p, h1, h2, h3, h4, h5, h6 {
   --clr-primary-300: hsl(166, 100%, 37%);
   --clr-primary-400: hsl(234, 85%, 45%);
 
+  /* bg-color for summary section */
+  --clr-bg-100: hsla(0, 100%, 67%, 0.1);
+  --clr-bg-200: hsl(39, 100%, 56%, 0.1);
+  --clr-bg-300: hsl(166, 100%, 37%, 0.1);
+  --clr-bg-400: hsl(234, 85%, 45%, 0.1);
+
   /* Gradients Colors */
   --clr-secondary-bg-200: hsl(252, 100%, 67%);
   --clr-secondary-bg-400: hsl(241, 81%, 54%);
@@ -63,18 +69,65 @@ p, h1, h2, h3, h4, h5, h6 {
   --font-hanken: 'Hanken Grotesk', sans-serif;
   --font-size: 18px;
 }
+.button {
+  background-color: var(--clr-gray);
+  color: var(--clr-blue);
+  border: none;
+  padding: 1rem 7rem;
+  border-radius: 2.5rem;
+}
+.button:hover {
+  background: linear-gradient(180deg,hsl(252, 100%, 67%), hsl(241, 81%, 54%));
+  cursor: pointer;
+}
+
 .summary {
   color: black;
+  padding: 1.25rem 1.5rem;
+}
+.summary__title {
+  text-align: left;
+  font-weight: bold;
+}
+
+.flex-group {
+  display: flex;
+  align-items: center;
+  flex-wrap: wrap;
+  gap: .5rem;
 }
 .summary__section {
   display: flex;
-  justify-content: center;
+  justify-content: space-between;
   align-items: center;
   text-align: center;
-  
+  flex-wrap: wrap;
+  padding: 1rem;
+  border-radius: 0.625rem;
+  margin: 1rem 0;
+  background-color: aliceblue;
 }
-.summary__markdown {
-  font-weight: bold;
+.summary__reaction {
+  background-color: var(--clr-bg-100);
+  color: var(--clr-primary-100);
+}
+.summary__memory {
+  background-color: var(--clr-bg-200);
+  color: var(--clr-primary-200);
+}
+.summary__verbal {
+  background-color: var(--clr-bg-300);
+  color: var(--clr-primary-300);
+}
+.summary__visual {
+  background-color: var(--clr-bg-400);
+  color: var(--clr-primary-400);
+}
+.text-content {
+  color: var(--clr-gray);
+}
+.text-content .text-sec {
+  color: var(--clr-300);
 }
 main {
   display: flex;
@@ -96,8 +149,8 @@ main {
   text-align: center;
   flex-wrap: wrap;
   flex-direction: column;
-  padding: 2rem;
-  gap: 1rem;
+  padding: 1.5rem 3.5rem;
+  gap: 0.25rem;
 }
 .project__main .your__result .result__circle {
   display: flex;
@@ -108,13 +161,14 @@ main {
   flex-direction: column;
   width: 6.4rem;
   height: 6.4rem;
-  /* padding: 15px; */
   border-radius: 100%; 
+  margin: 1rem;
   background: linear-gradient(180deg, hsla(256, 72%, 46%, 1),hsla(241, 72%, 46%, 0));
 }
 .result__title {
   color: var(--clr-lavender);
   font-size: 0.875rem;
+
 }
 .project__main .your__result .result__circle .result__range {
   font-size: 2.5rem;
@@ -132,4 +186,5 @@ main {
 .result__paragraph {
   font-size: 0.8rem;
   color: var(--clr-lavender);
+  margin-bottom: 0.775rem;
 }
