--- a/styles.css
+++ b/styles.css
@@ -80,10 +80,71 @@ p, h1, h2, h3, h4, h5, h6 {
   background: linear-gradient(180deg,hsl(252, 100%, 67%), hsl(241, 81%, 54%));
   cursor: pointer;
 }
-
+main {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+}
+.project__main {
+  max-width: 600px;
+  font-family: var(--font-hanken);
+  color: var(--clr-white);
+  box-shadow: .5rem 1rem 3rem var(--clr-gray);
+  border-radius: 1.65rem;
+}
+.project__main .your__result {
+  background: linear-gradient(360deg, hsl(241, 81%, 54%),hsl(252, 100%, 67%));
+  border-radius: 0 0 1.65rem 1.65rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  flex-wrap: wrap;
+  flex-direction: column;
+  padding: 1.5rem 3.5rem;
+  gap: 0.25rem;
+}
+.project__main .your__result .result__circle {
+  display: flex;
+  text-align: center;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+  flex-direction: column;
+  width: 6.4rem;
+  height: 6.4rem;
+  border-radius: 100%; 
+  margin: 1rem;
+  background: linear-gradient(180deg, hsla(256, 72%, 46%, 1),hsla(241, 72%, 46%, 0));
+}
+.result__title {
+  color: var(--clr-lavender);
+  font-size: 0.875rem;
+}
+.project__main .your__result .result__circle .result__range {
+  font-size: 2.5rem;
+  font-weight: 700;
+  line-height: normal;
+}
+.project__main .your__result .result__circle .result__range_small {
+  font-size: 0.8rem;
+  color: var(--clr-lavender);
+  opacity: 0.6;
+}
+.result__great {
+  font-size: 1.3rem;
+  line-height: normal;
+  font-weight: 500;
+}
+.result__paragraph {
+  font-size: 0.8rem;
+  color: var(--clr-lavender);
+  margin-bottom: 0.775rem;
+}
 .summary {
   color: black;
-  padding: 1.25rem 1.5rem;
+  padding: 1.5rem 1.5rem;
 }
 .summary__title {
   text-align: left;
@@ -129,62 +190,54 @@ p, h1, h2, h3, h4, h5, h6 {
 .text-content .text-sec {
   color: var(--clr-300);
 }
-main {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  text-align: center;
-}
-.project__main {
-  max-width: 600px;
-  font-family: var(--font-hanken);
-  color: var(--clr-white);
-}
-.project__main .your__result {
-  background: linear-gradient(360deg, hsl(241, 81%, 54%),hsl(252, 100%, 67%));
-  border-radius: 0 0 1.65rem 1.65rem;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  text-align: center;
-  flex-wrap: wrap;
-  flex-direction: column;
-  padding: 1.5rem 3.5rem;
-  gap: 0.25rem;
-}
-.project__main .your__result .result__circle {
-  display: flex;
-  text-align: center;
-  justify-content: center;
-  align-items: center;
-  flex-wrap: wrap;
-  flex-direction: column;
-  width: 6.4rem;
-  height: 6.4rem;
-  border-radius: 100%; 
-  margin: 1rem;
-  background: linear-gradient(180deg, hsla(256, 72%, 46%, 1),hsla(241, 72%, 46%, 0));
-}
-.result__title {
-  color: var(--clr-lavender);
-  font-size: 0.875rem;
-
-}
-.project__main .your__result .result__circle .result__range {
-  font-size: 2.5rem;
-  font-weight: 700;
-  line-height: normal;
-}
-.project__main .your__result .result__circle .result__range_small {
-  font-size: 0.8rem;
-  color: var(--clr-lavender);
-}
-.result__great {
-  font-size: 1.3rem;
-  line-height: normal;
-}
-.result__paragraph {
-  font-size: 0.8rem;
-  color: var(--clr-lavender);
-  margin-bottom: 0.775rem;
+@media (min-width: 600px) {
+  main {
+    height: 100vh;
+  }
+  .project__main {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+  }
+  .project__main .your__result {
+    border-radius: 1.65rem;
+  }
+  .result__great {
+    font-size: 1.8rem;
+  }
+  .result__paragraph {
+    padding: 0.5rem 1rem;
+    font-size: 0.875rem;
+  }
+  .project__main .your__result {
+    /* border-radius: 1.65rem; */
+    padding: 2.5rem 1.5rem;
+    gap: 0.75rem;
+  }
+  .project__main .your__result .result__circle {
+    width: 10rem;
+    height: 10rem;
+    border-radius: 100%; 
+    margin: 1rem 2.5rem;
+  }
+  .result__title {
+    font-size: 1.25rem;
+  }
+  .project__main .your__result .result__circle .result__range {
+    font-size: 3.5rem;
+  }
+  .project__main .your__result .result__circle .result__range_small {
+    font-size: 1rem;
+  }
+  .summary__title {
+    font-size: 1.25rem;
+    padding-bottom: 0.8rem;
+  }
+  .summary__section {
+    padding: 0.8rem;
+    font-size: 1rem;
+  }
+  .button {
+    padding: 0.8rem 5.5rem;
+    margin-top: 1.5rem;
+  }
 }
